--- a/Titans/web-front-end/src/main/resources/templates/home.html
+++ b/Titans/web-front-end/src/main/resources/templates/home.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Welcome!</h1>
-<p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+<p>Click <a th:href="@{/toMain}">here</a> to see a greeting.</p>
 </body>
 </html>
